# rustgpt

./: Cargo.toml  README.md  settings.yaml
src/: lib.rs  main.rs
