[package]
name = "rustgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = "1.0.171"
serde_derive = "1.0.171"
serde_json = "1.0.102"

